assets/css/main.scss
---
---

/*
 *    Minimal Mistakes Jekyll Theme
 *
 *  - Michael Rose
 *  - mademistakes.com
 *  - https://twitter.com/mmistakes
 *
*/

@import "vendor/breakpoint/breakpoint"; // media query mixins
@import "variables";
@import "mixins";
@import "vendor/susy/susy";

@import "reset";
@import "base";

@import "utilities";
@import "animations";
@import "tables";
@import "buttons";
@import "notices";
@import "masthead";
@import "navigation";
@import "footer";
@import "syntax";

@import "forms";

@import "page";
@import "archive";
@import "sidebar";

@import "vendor/font-awesome/fontawesome";
@import "vendor/font-awesome/solid";
@import "vendor/font-awesome/brands";
@import "vendor/magnific-popup/magnific-popup";
@import "print";

.paper-box {
    display: flex;
    justify-content: left;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    border-bottom: 1px #efefef solid;
    padding: 2em 0 2em 0;
    

    .paper-box-image{
        justify-content: center;
        display: flex;
        width: 100%;
        order: 2;
        img {
            max-width: 400px;
            box-shadow: 3px 3px 6px #888;
            object-fit: cover;
        }
    }
    
    .paper-box-text{
        max-width: 100%;
        order: 1;
    }
    
    @include breakpoint($medium) {
        .paper-box-image{
            justify-content: left;
            min-width: 200px;
            max-width: 40%;
            order: 1;
        }
        
        .paper-box-text{
            justify-content: left;
            padding-left: 2em;
            max-width: 60%;
            order: 2;
        }

    }


}

$scroll_offset : 2em;
h1:before, .anchor:before { 
    content: ''; 
    display: block; 
    position: relative; 
    width: 0; 
    height: $scroll_offset; 
    margin-top: -$scroll_offset;
}

.badge {
    padding-left: 1rem;
    padding-right: 1rem;
    position: absolute;
    margin-top: .5em;
    margin-left: -.5em;
    color: white;
    background-color: #00369f;
    font-size: .8em;
}

.theme-toggle-btn {
    position: fixed;
    top: 0.5em;
    right: 1em;
    z-index: 100;
    background: none;
    border: none;
    font-size: 1.1em;
    cursor: pointer;
    color: #555;
    padding: 0.5rem;
    line-height: 1;
    opacity: 0.7;

    &:hover {
        opacity: 1;
    }
}

html.dark {
    body { background: #1a1a1a; color: #e0e0e0; }
    a { color: #6db4e0; }

    .masthead { background: #1a1a1a; border-bottom: 1px solid #333; }
    .greedy-nav { background: #1a1a1a; }
    .greedy-nav a { color: #e0e0e0; background: transparent; }
    .greedy-nav a:hover { color: #fff; }

    .sidebar, .author__bio { color: #ccc; }
    .author__name { color: #e0e0e0; }
    .author__urls,
    .author__urls li,
    .author__urls li a,
    .author__urls li i,
    .sidebar i { color: #d0d0d0; }
    .author__urls { background: transparent; border-color: #333; }

    code, pre, tt { background: #2a2a2a; color: #e0e0e0; }
    hr { border-color: #333; }
    .paper-box { border-bottom-color: #333; }

    .page__content h1,
    .page__content h2,
    .page__content h3,
    .page__content h4,
    .page__content h5,
    .page__content h6 { color: #f0f0f0; }

    .theme-toggle-btn { color: #e0e0e0; }
}

